--- a/FinalProject/Facilities.html
+++ b/FinalProject/Facilities.html
@@ -39,7 +39,7 @@
       <h2> Outdoor Swimming Pool </h2>
       <p>Lorem ipsum dolor sit amet, pellentesque risus arcu sit tincidunt vitae nec, orci a velit etiam quis luctus ac, suscipit nunc class ut, metus libero sed malesuada mauris elit natoque. Nunc ornare quam, turpis quam.</p>
       <br />
-      <input type="submit" value="Images/Book It" onclick="Random();" />
+      <input type="submit" value="Book It" onclick="Random();" />
 
 
     </div>
