--- a/FinalProject/Thankyou.html
+++ b/FinalProject/Thankyou.html
@@ -15,7 +15,7 @@
 <p> Follow us on our socials and join the family! </p>
 <p><i class="fab fa-facebook"></i> | <i class="fab fa-twitter"></i> | <i class="fab fa-instagram"></i></p>
 <br />
-<center><a href="welcome.html"><input type="submit" value="Go back to homepage" /></a></center>
+<center><a href="Welcome.html"><input type="submit" value="Go back to homepage" /></a></center>
 </body>
 
 </html>
