--- a/FinalProject/Massages.html
+++ b/FinalProject/Massages.html
@@ -5,12 +5,14 @@
 <head>
 <title> Quietude Spa | Massages </title>
 <meta charset="utf-8" />
+<!--Stylesheet for Massages Sub-Page-->
 <link rel="stylesheet" href="CSS/Treatments.css" />
+<!--Icons for the footer-->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 
 <body>
-
+<!--Navigation Start-->
   <div class="navcontainer">
     <div class="topnav">
       <img class="logo" src="Images/Q Spa Logo.jpg">
@@ -22,7 +24,9 @@
       </div>
     </div>
   </div>
+<!--Navigation End-->
 
+<!--Inner Page Sub-Menu for Spa Options start-->
 <center><div class = "menunav">
   <ul>
   <li><a href="Treatments.html"> Treatments </a></li>
@@ -30,8 +34,10 @@
   <li><a href="Facilities.html"> Facilities </a></li>
 </ul>
 </div></center>
+<!--Inner Page Sub-Menu for Spa Options end-->
 <br />
 <center>
+  <!--Spa Options start-->
 <div class="table-container">
     <div class="table-item">
       <img class="massage1" src="Images/relaxation.jpg" width="200px" height="125px;">
@@ -65,7 +71,9 @@
     </div>
   </div>
 </div></center>
+<!--Spa Options end-->
 
+<!--Javascript for "book it" function to generate a random booking number-->
 <script>
 
 function Random() {
@@ -75,11 +83,11 @@ function Random() {
     }
 
 </script>
-
+<!--Footer Start-->
 <footer>
   <p> Project by Arohi Bangera   |   Follow us on <a href = "https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a> <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a> <a href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a></p>
 </footer>
-
+<!--Footer End-->
 
 </body>
 
