--- a/FinalProject/Thankyou.html
+++ b/FinalProject/Thankyou.html
@@ -3,7 +3,9 @@
 <head>
 <title> Quietude Spa | Thank you </title>
 <meta charset= "utf-8" />
+<!--Stylesheet for Thank You Page-->
 <link rel="stylesheet" href="CSS/Thankyou.css" />
+<!--Icons on page-->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body>
@@ -13,8 +15,10 @@
 <p>If you do not hear back from us in two business days, please reach us on our toll free number 800-QUIETUDE. </p>
 <br />
 <p> Follow us on our socials and join the family! </p>
+<!--Icons on page-->
 <p><i class="fab fa-facebook"></i> | <i class="fab fa-twitter"></i> | <i class="fab fa-instagram"></i></p>
 <br />
+<!--Buttons for going back to homepage-->
 <center><a href="Welcome.html"><input type="submit" value="Go back to homepage" /></a></center>
 </body>
 
