--- a/FinalProject/About us.html
+++ b/FinalProject/About us.html
@@ -4,12 +4,15 @@
 <head>
   <meta charset="utf-8" />
   <title> Quitetude Spa | About Us </title>
+  <!--Stylesheet for About Us Page-->
   <link rel="stylesheet" href="CSS/About Us.css" />
+  <!--Icons for the footer-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 
 <body>
 
+<!--Navigation Start-->
   <div class="navcontainer">
     <div class="topnav">
       <img class="logo" src="Images/Q Spa Logo.jpg">
@@ -21,13 +24,15 @@
       </div>
     </div>
   </div>
-
+<!--Navigation End-->
 
   <center>
     <br />
+<!--Heading-->
 <h1> Quietude Spa | About Us </h1>
+<!--Image for the page-->
     <img class="aboutus" src ="Images/O6I4KK0.jpg">
-
+<!--Text on page/Lorem Ipsum Filler-->
   <div class ="content">
     <p> <i>Find your zen</i> </p>
 
@@ -40,11 +45,11 @@
 
   <p>Lorem ipsum dolor sit amet, luctus nullam lacus vitae ut magna, fringilla etiam. Luctus pede sed ipsum eget eu convallis, sit vivamus id in suscipit id et, vivamus erat mi amet vehicula suscipit. Dui pellentesque adipiscing arcu lorem condimentum arcu, venenatis nulla non consectetuer est sapien in, vestibulum vestibulum, tempus ac lorem quis malesuada habitasse odio, urna urna vestibulum vel integer facilisis in. Ac nunc, luctus et dictum, urna sit odio, imperdiet purus etiam tellus massa. </p>
 </div></center>
-
+<!--Footer Start-->
 <footer>
   <p> Project by Arohi Bangera   |   Follow us on <a href = "https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a> <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a> <a href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a></p>
 </footer>
-
+<!--Footer End-->
 </body>
 
 </html>
