--- a/FinalProject/Contact Us.html
+++ b/FinalProject/Contact Us.html
@@ -5,8 +5,11 @@
 <head>
 <title> Quietude | Contact Us </title>
 <meta charset="utf-8" />
+<!--Stylesheet for Contact Us Page-->
 <link rel="stylesheet" href="CSS/Contact Us.css" />
+<!--Icons for the footer-->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+<!--Script for Form Validation start-->
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -19,11 +22,12 @@ $(document).ready(function(){
     $("#myForm").validate();
 });
 </script>
-
+<!--Script for Form Validation end-->
 
 </head>
 
 <body>
+  <!--Navigation Start-->
   <div class="navcontainer">
     <div class="topnav">
       <img class="logo" src="Images/Q Spa Logo.jpg">
@@ -35,6 +39,7 @@ $(document).ready(function(){
       </div>
     </div>
   </div>
+<!--Navigation End-->
 
 <div class="container">
   <div style="text-align:center">
@@ -43,10 +48,12 @@ $(document).ready(function(){
   </div>
   <div class="row">
     <div class="column">
+      <!--Google Map for Location (fictional)-->
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3302.4373961661386!2d-80.01849218482006!3d34.135150180583416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88557e70664ac439%3A0x9f9ebddcbc82536a!2sQuietude+Rd%2C+South+Carolina+29161%2C+USA!5e0!3m2!1sen!2suk!4v1543990262404" width="635" height="380" frameborder="0" style="border:0; width:100%" allowfullscreen></iframe>
 
     </div>
     <div class="column">
+      <!--Form for Inquiries-->
       <form id="myForm" action="Thankyou.html">
 
         <label for="name">Name <i>(*required)</i></label>
@@ -63,11 +70,11 @@ $(document).ready(function(){
     </div>
   </div>
 </div>
-
+<!--Footer Start-->
 <footer>
   <p> Project by Arohi Bangera   |   Follow us on <a href = "https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a> <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a> <a href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a></p>
 </footer>
-
+<!--Footer End-->
 
 
 
