Changes on Website

--- a/FinalProject/Facilities.html
+++ b/FinalProject/Facilities.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
 <title> Quietude Spa | Facilities </title>
@@ -15,12 +15,12 @@
 <!--Navigation Start-->
   <div class="navcontainer">
     <div class="topnav">
-      <img class="logo" src="Images/Q Spa Logo.jpg">
+      <img class="logo" src="Images/QSpaLogo.jpg" alt="Quietude Spa Logo">
       <div class="topnav-right">
         <a href="Welcome.html">Home</a>
-        <a href="About us.html">About Us</a>
+        <a href="AboutUs.html">About Us</a>
         <a href="Treatments.html" id="iamhere">Treatments and Bookings</a>
-        <a href="Contact Us.html">Contact Us</a>
+        <a href="ContactUs.html">Contact Us</a>
       </div>
     </div>
   </div>
@@ -41,7 +41,7 @@
 <!--Spa Options start-->
 <div class="table-container">
     <div class="table-item">
-      <img class="facilities1" src="Images/swim.jpg" width="200px" height="125px;">
+      <img class="facilities" src="Images/swim.jpg" alt="Swimming Pool">
       <br />
       <h2> Outdoor Swimming Pool </h2>
       <p>Lorem ipsum dolor sit amet, pellentesque risus arcu sit tincidunt vitae nec, orci a velit etiam quis luctus ac, suscipit nunc class ut, metus libero sed malesuada mauris elit natoque. Nunc ornare quam, turpis quam.</p>
@@ -51,7 +51,7 @@
 
     </div>
     <div class="table-item">
-      <img class="facilities2" src="Images/relaxlounge.jpg" width="200px" height="125px;">
+      <img class="facilities" src="Images/relaxlounge.jpg" alt="Relax Louge">
       <br />
       <h2> Relaxation Lounge </h2>
       <p>Lorem ipsum dolor sit amet, pellentesque risus arcu sit tincidunt vitae nec, orci a velit etiam quis luctus ac, suscipit nunc class ut, metus libero sed malesuada mauris elit natoque. Nunc ornare quam, turpis quam.</p>
@@ -62,7 +62,7 @@
 
     </div>
     <div class="table-item">
-      <img class="facilities3" src="Images/steam.jpg" width="200px" height="125px;">
+      <img class="facilities" src="Images/steam.jpg" alt="Steam and Sauna">
       <br />
       <h2> Steam and Sauna</h2>
       <p>Lorem ipsum dolor sit amet, pellentesque risus arcu sit tincidunt vitae nec, orci a velit etiam quis luctus ac, suscipit nunc class ut, metus libero sed malesuada mauris elit natoque. Nunc ornare quam, turpis quam.</p>
@@ -71,7 +71,7 @@
 
     </div>
   </div>
-</div></center>
+</center>
 <!--Spa Options end-->
 
 <!--Javascript for "book it" function to generate a random booking number-->
