--- a/FinalProject/Massages.html
+++ b/FinalProject/Massages.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
 <title> Quietude Spa | Massages </title>
@@ -15,12 +15,12 @@
 <!--Navigation Start-->
   <div class="navcontainer">
     <div class="topnav">
-      <img class="logo" src="Images/Q Spa Logo.jpg">
+      <img class="logo" src="Images/QSpaLogo.jpg" alt="Quietude Spa Logo">
       <div class="topnav-right">
         <a href="Welcome.html">Home</a>
-        <a href="About us.html">About Us</a>
+        <a href="AboutUs.html">About Us</a>
         <a href="Treatments.html" id="iamhere">Treatments and Bookings</a>
-        <a href="Contact Us.html">Contact Us</a>
+        <a href="ContactUs.html">Contact Us</a>
       </div>
     </div>
   </div>
@@ -40,7 +40,7 @@
   <!--Spa Options start-->
 <div class="table-container">
     <div class="table-item">
-      <img class="massage1" src="Images/relaxation.jpg" width="200px" height="125px;">
+      <img class="massages" src="Images/relaxation.jpg" alt="Relaxation Massage">
       <br />
       <h2> Relaxation Massage </h2>
       <p>Lorem ipsum dolor sit amet, pellentesque risus arcu sit tincidunt vitae nec, orci a velit etiam quis luctus ac, suscipit nunc class ut, metus libero sed malesuada mauris elit natoque. Nunc ornare quam, turpis quam.</p>
@@ -50,7 +50,7 @@
 
     </div>
     <div class="table-item">
-      <img class="massage2" src="Images/stressrelief.jpg" width="200px" height="125px;">
+      <img class="massages" src="Images/stressrelief.jpg" alt="Stress Relief Massage">
       <br />
       <h2> Stress Relief Massage </h2>
       <p>Lorem ipsum dolor sit amet, pellentesque risus arcu sit tincidunt vitae nec, orci a velit etiam quis luctus ac, suscipit nunc class ut, metus libero sed malesuada mauris elit natoque. Nunc ornare quam, turpis quam.</p>
@@ -61,7 +61,7 @@
 
     </div>
     <div class="table-item">
-      <img class="massage3" src="Images/hotstone.jpg" width="200px" height="125px;">
+      <img class="massages" src="Images/hotstone.jpg" alt="Hot Stone Massage">
       <br />
       <h2> Hot Stones Massage</h2>
       <p>Lorem ipsum dolor sit amet, pellentesque risus arcu sit tincidunt vitae nec, orci a velit etiam quis luctus ac, suscipit nunc class ut, metus libero sed malesuada mauris elit natoque. Nunc ornare quam, turpis quam.</p>
@@ -70,7 +70,7 @@
 
     </div>
   </div>
-</div></center>
+</center>
 <!--Spa Options end-->
 
 <!--Javascript for "book it" function to generate a random booking number-->
