--- a/FinalProject/Thankyou.html
+++ b/FinalProject/Thankyou.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title> Quietude Spa | Thank you </title>
 <meta charset= "utf-8" />
@@ -19,7 +19,7 @@
 <p><i class="fab fa-facebook"></i> | <i class="fab fa-twitter"></i> | <i class="fab fa-instagram"></i></p>
 <br />
 <!--Buttons for going back to homepage-->
-<center><a href="Welcome.html"><input type="submit" value="Go back to homepage" /></a></center>
+<center><a href="Welcome.html" class="button">Go back to homepage</a></center>
 </body>
 
 </html>
