--- a/FinalProject/Treatments.html
+++ b/FinalProject/Treatments.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
 <title> Quietude Spa | Treatments </title>
@@ -15,12 +15,12 @@
 <!--Navigation Start-->
   <div class="navcontainer">
     <div class="topnav">
-      <img class="logo" src="Images/Q Spa Logo.jpg">
+      <img class="logo" src="Images/QSpaLogo.jpg" alt="Quietude Spa Logo">
       <div class="topnav-right">
         <a href="Welcome.html">Home</a>
-        <a href="About us.html">About Us</a>
+        <a href="AboutUs.html">About Us</a>
         <a href="Treatments.html" id="iamhere">Treatments and Bookings</a>
-        <a href="Contact Us.html">Contact Us</a>
+        <a href="ContactUs.html">Contact Us</a>
       </div>
     </div>
   </div>
@@ -40,7 +40,7 @@
     <!--Spa Options start-->
 <div class="table-container">
     <div class="table-item">
-      <img class="treatment1" src="Images/relax.jpg" width="200px" height="125px;">
+      <img class="treatments" src="Images/relax.jpg" alt="Relax Treatment">
       <br />
       <h2> Relax and De-Stress Treatment </h2>
       <p>Lorem ipsum dolor sit amet, pellentesque risus arcu sit tincidunt vitae nec, orci a velit etiam quis luctus ac, suscipit nunc class ut, metus libero sed malesuada mauris elit natoque. Nunc ornare quam, turpis quam.</p>
@@ -50,7 +50,7 @@
 
     </div>
     <div class="table-item">
-      <img class="treatment2" src="Images/detox.jpg" width="200px" height="125px;">
+      <img class="treatments" src="Images/detox.jpg" alt="Detox Treatment">
       <br />
       <h2> Detox and Cleanse Treatment </h2>
       <p>Lorem ipsum dolor sit amet, pellentesque risus arcu sit tincidunt vitae nec, orci a velit etiam quis luctus ac, suscipit nunc class ut, metus libero sed malesuada mauris elit natoque. Nunc ornare quam, turpis quam.</p>
@@ -61,7 +61,7 @@
 
     </div>
     <div class="table-item">
-      <img class="treatment3" src="Images/spacation.jpg" width="200px" height="125px;">
+      <img class="treatments" src="Images/spacation.jpg" alt="Spacation">
       <br />
       <h2> Quietude Spa-cation Treatment</h2>
       <p>Lorem ipsum dolor sit amet, pellentesque risus arcu sit tincidunt vitae nec, orci a velit etiam quis luctus ac, suscipit nunc class ut, metus libero sed malesuada mauris elit natoque. Nunc ornare quam, turpis quam.</p>
@@ -70,7 +70,7 @@
 
     </div>
   </div>
-</div></center>
+</center>
 <!--Spa Options end-->
 <!--Javascript for "book it" function to generate a random booking number-->
 <script>
