--- a/FinalProject/Welcome.html
+++ b/FinalProject/Welcome.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
 <title> Quietude Spa | Welcome </title>
@@ -10,9 +10,9 @@
 
 <body>
 <!--Three Background Images for the Slideshow-->
-<img class="bgimage" src="Images/130124162549-wellness-spa-4.jpg">
-   <img class="bgimage" src="Images/yoga-3840x2160-girl-weight-loss-beach-sand-sun-relax-fitness-11090 copy.jpg">
-   <img class="bgimage" src="Images/Heide-Spa-Bad-Dueben_Welness_Heide-Spa-Hotel-und-Resort_region.lipzig.travel.jpg">
+<img class="bgimage" src="Images/bgimage1.jpg" alt="Background image 1">
+   <img class="bgimage" src="Images/bgimage2.jpg" alt="Background image 2">
+   <img class="bgimage" src="Images/bgimage3.jpg" alt="Background image 3">
 
 
 <!--Javascript for Background Image Slideshow start-->
@@ -39,12 +39,12 @@
 <!--Navigation Start-->
 <div class="container">
   <div class="topnav">
-    <img class="logo" src="Images/Q Spa Logo.jpg">
+    <img class="logo" src="Images/QSpaLogo.jpg" alt="Quietude Spa Logo">
     <div class="topnav-right">
       <a href="Welcome.html" id="iamhere">Home</a>
-      <a href="About us.html">About Us</a>
+      <a href="AboutUs.html">About Us</a>
       <a href="Treatments.html">Treatments and Bookings</a>
-      <a href="Contact Us.html">Contact Us</a>
+      <a href="ContactUs.html">Contact Us</a>
     </div>
   </div>
 </div>
