--- a/FinalProject/Thankyou.html
+++ b/FinalProject/Thankyou.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<title> Quietude Spa | Thank you </title>
-<meta charset= "utf-8" />
-<!--Stylesheet for Thank You Page-->
-<link rel="stylesheet" href="CSS/Thankyou.css" />
-<!--Icons on page-->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+    <title> Quietude Spa | Thank you </title>
+    <meta charset="utf-8" />
+    <!--Stylesheet for Thank You Page-->
+    <link rel="stylesheet" href="CSS/Thankyou.css" />
+    <!--Icons on page-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
+
 <body>
-<h2> Thank you! </h2>
-<p> <i> Don't stress, we got this. </i></p>
-<p> We have received your query and we are currently looking at addressing it. Please allow our representatives to respond to you in two business days or less. </p>
-<p>If you do not hear back from us in two business days, please reach us on our toll free number 800-QUIETUDE. </p>
-<br />
-<p> Follow us on our socials and join the family! </p>
-<!--Icons on page-->
-<p><i class="fab fa-facebook"></i> | <i class="fab fa-twitter"></i> | <i class="fab fa-instagram"></i></p>
-<br />
-<!--Buttons for going back to homepage-->
-<center><a href="Welcome.html" class="button">Go back to homepage</a></center>
+    <h2> Thank you! </h2>
+    <p> <i> Don't stress, we got this. </i></p>
+    <p> We have received your query and we are currently looking at addressing it. Please allow our representatives to respond to you in two business days or less. </p>
+    <p>If you do not hear back from us in two business days, please reach us on our toll free number 800-QUIETUDE. </p>
+    <br />
+    <p> Follow us on our socials and join the family! </p>
+    <!--Icons on page-->
+    <p><i class="fab fa-facebook"></i> | <i class="fab fa-twitter"></i> | <i class="fab fa-instagram"></i></p>
+    <br />
+    <!--Buttons for going back to homepage-->
+    <a href="Welcome.html" class="button">Go back to homepage</a>
 </body>
 
 </html>
