--- a/FinalProject/Treatments.html
+++ b/FinalProject/Treatments.html
@@ -42,7 +42,7 @@
         <div class="table-item">
             <img class="treatments" src="Images/relax.jpg" alt="Relax Treatment">
             <br />
-            <h2> Relax and De-Stress Treatment </h2>
+            <h2> Relax Treatment </h2>
             <p>Lorem ipsum dolor sit amet, pellentesque risus arcu sit tincidunt vitae nec, orci a velit etiam quis luctus ac, suscipit nunc class ut, metus libero sed malesuada mauris elit natoque. Nunc ornare quam, turpis quam.</p>
             <br />
             <input type="submit" value="Book It" onclick="Random();" />
@@ -51,7 +51,7 @@
         <div class="table-item">
             <img class="treatments" src="Images/detox.jpg" alt="Detox Treatment">
             <br />
-            <h2> Detox and Cleanse Treatment </h2>
+            <h2> Detox Treatment </h2>
             <p>Lorem ipsum dolor sit amet, pellentesque risus arcu sit tincidunt vitae nec, orci a velit etiam quis luctus ac, suscipit nunc class ut, metus libero sed malesuada mauris elit natoque. Nunc ornare quam, turpis quam.</p>
             <br />
             <input type="submit" value="Book It" onclick="Random();" />
@@ -60,7 +60,7 @@
         <div class="table-item">
             <img class="treatments" src="Images/spacation.jpg" alt="Spacation">
             <br />
-            <h2> Quietude Spa-cation Treatment</h2>
+            <h2> Spa-cation Treatment</h2>
             <p>Lorem ipsum dolor sit amet, pellentesque risus arcu sit tincidunt vitae nec, orci a velit etiam quis luctus ac, suscipit nunc class ut, metus libero sed malesuada mauris elit natoque. Nunc ornare quam, turpis quam.</p>
             <br />
             <input type="submit" value="Book It" onclick="Random();" />
