--- a/FinalProject/ContactUs.html
+++ b/FinalProject/ContactUs.html
@@ -51,7 +51,7 @@
             </div>
             <div class="column">
                 <!--Form for Inquiries-->
-                <form id="myForm" action="Thankyou.html" method="post">
+                <form id="myForm" action="Thankyou.html">
 
                     <label for="name">Name <i>(*required)</i></label>
                     <input type="text" id="name" name="name" placeholder="Enter your name" class="required">
