--- a/FinalProject/Thankyou.html
+++ b/FinalProject/Thankyou.html
@@ -19,7 +19,7 @@
     <p>If you do not hear back from us in two business days, please reach us on our toll free number 800-QUIETUDE. </p>
     <br />
     <p> Follow us on our socials and join the family! </p>
-    <!--Icons on page-->
+    <!--Icons on page to follow social-->
     <p><i class="fab fa-facebook"></i> | <i class="fab fa-twitter"></i> | <i class="fab fa-instagram"></i></p>
     <br />
     <!--Buttons for going back to homepage-->
