--- a/FinalProject/ContactUs.html
+++ b/FinalProject/ContactUs.html
@@ -63,8 +63,8 @@
                         <label for="subject">Your Inquiry <i>(*required)</i></label>
                         <textarea id="subject" name="subject" class="required" placeholder="What can we help you with today?" style="height:170px"></textarea>
                     </p>
-                    <input type="submit" value="Submit">
                 </form>
+                <a href="Thankyou.html" class="button" style="text-decoration:none">Submit</a>
             </div>
         </div>
     </div>
