--- a/FinalProject/Treatments.html
+++ b/FinalProject/Treatments.html
@@ -6,7 +6,7 @@
 <head>
     <title> Quietude Spa | Treatments </title>
     <meta charset="utf-8" />
-    <!--Stylesheet for Treatments Sub-Page-->
+    <!--Stylesheet for the Treatments Sub-Page-->
     <link rel="stylesheet" href="CSS/Treatments.css" />
     <!--Icons for the footer-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -69,7 +69,7 @@
         </div>
     </div>
     <!--Spa Options end-->
-    
+
     <!--Javascript for "book it" function to generate a random booking number-->
     <script>
         function Random() {
