--- a/DGMDE12/index.html
+++ b/DGMDE12/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Assignment 1 </title>
+    <title> Home | Arohi Bangera </title>
     <link rel="stylesheet" href="hello.css" />
     <!-- CSS Stylesheet -->
     <script src="p5/p5.min.js"></script>
