--- a/DGMDE12/index.html
+++ b/DGMDE12/index.html
@@ -14,7 +14,7 @@
     <script src="p5/p5.sound.min.js"></script>
     <!-- P5 reference sheet -->
     <script src="sketch.js"></script>
-    <!-- My artwork, Assignment 1 -->
+    
 </head>
 
 <body>
@@ -28,6 +28,9 @@
 
 <div>
 <br>
+<br>
+<!-- Assignment 3 Link -->
+<h2><a href="Assignment3.html">Assignment 3 - DOM, DOM, DOM</a></h2>
 <br>
 <!-- Assignment 2 Links for Part A, B and C -->
 <h2>Assignment 2 - It's About Time</h2>
