--- a/DGMDE12/Assignment 1.html
+++ b/DGMDE12/Assignment 1.html
@@ -26,7 +26,27 @@
         <!-- Navigation Bar End-->
     </ul>
     <br>
-    <br> Assignment 1
+    <div>
+    <br>
+    <br>
+    <!-- Final Project Link -->
+    <h2><a href="FinalProject.html">Final Project - World Happiness: Data Visualization</a></h2>
+    <br>
+    <br>
+    <!-- Assignment 3 Link -->
+    <h2><a href="Assignment3.html">Assignment 3 - DOM, DOM, DOM</a></h2>
+    <br>
+    <!-- Assignment 2 Links for Part A, B and C -->
+    <h2>Assignment 2 - It's About Time</h2>
+    <br>
+    <h4><a href="PartA.html">Part A – Tally Ho! </a></h4>
+    <h4><a href="PartB.html">Part B – Tick Tock </a></h4>
+
+    <h4><a href="PartC.html">Part C – Abstract Clock </a></h4>
+    </div>
+
+    <br>
+    <h2>Assignment 1</h2>
     <br>
     <b>"Minimalism Infused Overlapping"</b>
     <br>
