--- a/DGMDE12/index.html
+++ b/DGMDE12/index.html
@@ -14,7 +14,7 @@
     <script src="p5/p5.sound.min.js"></script>
     <!-- P5 reference sheet -->
     <script src="sketch.js"></script>
-    
+
 </head>
 
 <body>
@@ -27,6 +27,10 @@
     </ul>
 
 <div>
+<br>
+<br>
+<!-- Final Project Link -->
+<h2><a href="FinalProject.html">Final Project - World Happiness: Data Visualization</a></h2>
 <br>
 <br>
 <!-- Assignment 3 Link -->
