--- a/DGMDE12/FinalProject.html
+++ b/DGMDE12/FinalProject.html
@@ -30,7 +30,7 @@
     <br>
     <br>
     <!-- Detailing the project -->
-    <p> This data visualization piece was inpsired by the <a href="worldhappiness.report/">World Happiness Index. </a> The color labelling in the piece tells a story, where in <font color="green"><b>green</b></font> represents the top 5 countries who have to a large extent figured out happiness and <font color="red"><b>red</b></font> represents the last 20 countries who are yet to figure happiness out. </p>
+    <p> This data visualization piece was inpsired by the <a href="https://worldhappiness.report">World Happiness Index. </a> The color labelling in the piece tells a story, where in <font color="green"><b>green</b></font> represents the top 5 countries who have to a large extent figured out happiness and <font color="red"><b>red</b></font> represents the last 20 countries who are yet to figure happiness out. </p>
     <p> <b> How is happiness calculated? </b> The rankings are based on answers to the main life evaluation question asked in the poll. Through a tool called the Cantril ladder, respondents are asked to rate their own current lives on a scale from 0 to 10. Read more in the <a href="https://worldhappiness.report/faq/">World Happiness Report FAQ.</a></p>
     <p><i> Note: If you press your mouse, the countries associated with each number will be revealed.</i> </p>
 
