--- a/DGMDE20/Home.html
+++ b/DGMDE20/Home.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <a tabindex="0" class="skip-link" href=".item3">Skip to Main Content</a>
 
     <div class="container">
         <!-- Header -->
@@ -21,7 +22,7 @@
             <input type="checkbox" id="hamburger" />
             <ul>
                 <li><a href="Home.html">Home </a></li>
-                <li><a href="Blends.html">Tea Blends</a></li>
+                <li><a href="TeaBlends.html">Tea Blends</a></li>
                 <li><a href="#">Order </a></li>
             </ul>
         </nav>
