--- a/DGMDE20/TeaBlends.html
+++ b/DGMDE20/TeaBlends.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <a tabindex="0" class="skip-link" href=".container">Skip to Main Content</a>
 
     <!-- Header -->
     <header>
@@ -22,7 +23,7 @@
         <input type="checkbox" id="hamburger" />
         <ul>
             <li><a href="Home.html">Home </a></li>
-            <li><a href="Blends.html">Tea Blends</a></li>
+            <li><a href="TeaBlends.html">Tea Blends</a></li>
             <li><a href="#">Order </a></li>
         </ul>
     </nav>
