--- a/DGMDE20/Tea.html
+++ b/DGMDE20/Tea.html
@@ -23,7 +23,7 @@
         <input type="checkbox" id="hamburger" />
         <ul>
             <li><a href="Home.html">Home </a></li>
-            <li><a href="TeaBlends.html">Tea Blends</a></li>
+            <li><a href="Tea.html">Tea Blends</a></li>
             <li><a href="#">Order </a></li>
         </ul>
     </nav>
