--- a/career.html
+++ b/career.html
@@ -64,7 +64,7 @@
                         <li class="current"><a href="#intro" class="smoothscroll">Who Am I</a></li>
                         <li><a href="#services" class="smoothscroll">Program</a></li>
                         <li><a href="#works" class="smoothscroll">Testimonials</a></li>
-                        <li><a href="#contact" class="smoothscroll">Get In Touch</a></li>
+                        <li><a href="#contact" class="smoothscroll">Enroll Now</a></li>
                     </ul>
                 </nav>
 
@@ -109,7 +109,7 @@
                         <span class="s-intro__bg"></span>
 
                         <h1 class="s-intro__text">
-                            Fasten your careers,<br>
+                            Fasten your career,<br>
                              we're about to launch it<span>.</span>
                         </h1>
 
@@ -126,19 +126,19 @@
                     <h2 class="s-intro__about-title"> <font color="white">Hello! I’m Arohi Bangera.</font></h2>
 
                     <p> <font color="white">
-                    Seven years ago, during my final years at university, I was struggling to land a decent job. I was looking for someone to mentor me, advise me and teach me the ropes. This is why, I am launching my own career coaching program. From one young adult to another, I am here for you. </font>
+                    Seven years ago, during my final years at university, I was struggling to land a decent job. I was looking for someone to mentor me, advise me and teach me the ropes. This is why I am launching my own career coaching program. From one young adult to another, I am here for you. </font>
                     </p>
 
                     <p> <font color="white">
                       <ul>
                       A few facts about me:
-<li> I’ve been working in the corporate world particularly in tech for <b>7+ years now </b></li>
-<li> I recently graduated with a <b>Masters in Digital Media Design from Harvard University</b> </li>
-<li> Recognized as one of the <b>Faces to Watch for Campaign Middle East’s Brand Edition</b> </li>
-<li> Mentored and supported several <b>young adults and graduates</b> through their career journeys </li>
-<li> <b>Google’s #IamRemarkable facilitator</b>, where I help people recognize their true worth </li>
-<li> <b>Co-founder of Project EQ</b>, an initiative aimed to upbring better world citizens </li>
-<li> <b>Head of Communciations</b> for Connecting Women in Technology MENA </li>
+<li> I’ve been working in the corporate world particularly in tech for <b>7+ years now. </b></li>
+<li> I recently graduated with a <b>Masters in Digital Media Design from Harvard University</b> where I was also the <b>Director of Communications</b> for Harvard Extension Student Association. </li>
+<li> I've been recognized as one of the <b>Faces to Watch for Campaign Middle East’s Brand Edition.</b> </li>
+<li> I've mentored and supported dozens of <b>young adults and graduates</b> through their career journeys. </li>
+<li> <b>I am facilitator for Google’s #IamRemarkable program</b>, where I lead workshops to help people recognize their true worth. </li>
+<li> <b>I am the co-founder of Project EQ</b>, an initiative aimed to upbring better world citizens </li>
+<li> <b>I am the Head of Communciations</b> for Connecting Women in Technology MENA </li>
 </ul>
 </font>
 </p>
@@ -201,8 +201,8 @@
                         An all-in-one <br>
                         career coaching program
                     </h1>
-                    <p> <font color="white"> Pricing Structure: 750AED for one person OR <br>
-                      500AED for one person, if you enroll one other friend into the program </font>
+                    <font color="white"><p> All sessions will be 1 hour long and will be held virtually. </p></font>
+
                 </div>
             </div> <!-- end section-header -->
 
@@ -266,6 +266,9 @@
 
             <section id="works" class="s-works target-section">
 
+
+          <center>  <font color="#24A89B"><h1> What others are saying: </h1> </font></center>
+
             <div class="row testimonials">
                 <div class="column lg-12">
 
@@ -282,7 +285,7 @@
                                     </cite> -->
                                 </div>
                                 <p>
-                                <font color="white">  <strong>Racheal</strong> </font></br>
+                                <font color="white">  <strong>Racheal Woods</strong> </font></br>
                                   <span>United States</span>
                                   <br>
                                   <br>
@@ -299,7 +302,7 @@
                                     </cite> -->
                                 </div>
                                 <p>
-                                  <font color="white">  <strong>Simone</strong> </font></br>
+                                  <font color="white">  <strong>Simone Jaya</strong> </font></br>
                                     <span>United Arab Emirates</span>
                                     <br>
                                     <br>
@@ -316,7 +319,7 @@
                                     </cite> -->
                                 </div>
                                 <p>
-                                  <font color="white">  <strong>Latiesha</strong> </font></br>
+                                  <font color="white">  <strong>Latiesha Whitsey</strong> </font></br>
                                     <span>United States</span>
                                     <br>
                                     <br>
@@ -333,7 +336,7 @@
                                     </cite> -->
                                 </div>
                                 <p>
-                                  <font color="white">  <strong>Stella</strong> </font></br>
+                                  <font color="white">  <strong>Stella Chiori</strong> </font></br>
                                     <span>United States</span>
                                     <br>
                                     <br>
@@ -368,10 +371,11 @@
 
             <div class="row row-x-center text-center s-contact__content">
                 <div class="column lg-12">
-                    <!-- <p class="lead">
-                    Nunc interdum lacus sit amet orci. Vestibulum dapibus nunc ac augue. Fusce vel dui. In ac felis
-                    quis tortor malesuada pretium. Curabitur vestibulum aliquam leo. Quasi sed at voluptas corrupti eius distinctio.
-                    </p> -->
+
+                    <p class="lead">
+                      Pricing Structure: 750AED for one person OR
+                        500AED for one person, if you enroll one other friend into the program
+                    </p>
                     <div class="btn-wrap">
                         <a href="https://forms.gle/B6NS9U8zfXcDjcMWA" target=”_blank” class="btn btn--primary">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M20,4H4C2.897,4,2,4.897,2,6v12c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2V6C22,4.897,21.103,4,20,4z M20,6v0.511 l-8,6.223L4,6.512V6H20z M4,18V9.044l7.386,5.745C11.566,14.93,11.783,15,12,15s0.434-0.07,0.614-0.211L20,9.044L20.002,18H4z"></path></svg>
@@ -379,13 +383,7 @@
                         </a>
                     </div>
 
-                    <h5> Alternatively, if you are looking for individual sessions </h5>
-                      <div class="btn-wrap">
-                          <a class="btn u-fullwidth" href="mailto:arohibangera14@gmail.com">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M20,4H4C2.897,4,2,4.897,2,6v12c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2V6C22,4.897,21.103,4,20,4z M20,6v0.511 l-8,6.223L4,6.512V6H20z M4,18V9.044l7.386,5.745C11.566,14.93,11.783,15,12,15s0.434-0.07,0.614-0.211L20,9.044L20.002,18H4z"></path></svg>
-                              Email me
-                          </a>
-                      </div>
+
                 </div>
             </div>
 
