--- a/career.html
+++ b/career.html
@@ -126,19 +126,19 @@
                     <h2 class="s-intro__about-title"> <font color="white">Hello! I’m Arohi Bangera.</font></h2>
 
                     <p> <font color="white">
-                    Seven years ago, during my final years at university, I was struggling to land a decent job. I was looking for someone to mentor me, advise me and teach me the ropes. This is why I am launching my own career coaching program. From one young adult to another, I am here for you. </font>
+                    Seven years ago, during my final years at university, I was struggling to land a decent job. I was looking for someone to mentor me, advise me and teach me the ropes. This is why I am launching my own career coaching program. <b>From one young adult to another, I am here for you</b>. </font>
                     </p>
 
                     <p> <font color="white">
                       <ul>
                       A few facts about me:
 <li> I’ve been working in the corporate world particularly in tech for <b>7+ years now. </b></li>
-<li> I recently graduated with a <b>Masters in Digital Media Design from Harvard University</b> where I was also the <b>Director of Communications</b> for Harvard Extension Student Association. </li>
+<li> I recently graduated with a <b>Masters in Digital Media Design from Harvard University</b>, where I was also the <b>Director of Communications</b> for the Harvard Extension Student Association. </li>
 <li> I've been recognized as one of the <b>Faces to Watch for Campaign Middle East’s Brand Edition.</b> </li>
 <li> I've mentored and supported dozens of <b>young adults and graduates</b> through their career journeys. </li>
-<li> <b>I am facilitator for Google’s #IamRemarkable program</b>, where I lead workshops to help people recognize their true worth. </li>
+<li> <b>I am a facilitator for Google’s #IamRemarkable program</b>, where I lead workshops to help people recognize their true worth. </li>
 <li> <b>I am the co-founder of Project EQ</b>, an initiative aimed to upbring better world citizens </li>
-<li> <b>I am the Head of Communciations</b> for Connecting Women in Technology MENA </li>
+<li> <b>I am the Head of Communications</b> for Connecting Women in Technology MENA </li>
 </ul>
 </font>
 </p>
